--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -15,6 +15,10 @@ pluginManagement {
         mavenCentral()
         gradlePluginPortal()
     }
+    dependencies {
+    classpath 'com.google.gms:google-services:4.4.2'
+    
+}
 
     plugins {
         id "dev.flutter.flutter-gradle-plugin" version "1.0.0" apply false
