--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,7 @@
 plugins{
     id "com.android.application"
     id "dev.flutter.flutter-gradle-plugin"
+    id "com.google.gms.google-services"
 }
 
 def localProperties = new Properties()
@@ -53,4 +54,8 @@ android {
 
 flutter {
     source '../..'
+    }
+dependencies{
+    implementation platform('com.google.firebase:firebase-bom:33.7.0')
+    implementation("com.google.firebase:firebase-analytics")
 }
